...
    <string name="no_saved_scenarios">There are no saved scenarios.</string>
    <string name="select">Select</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enter_a_scenario_name">Enter a scenario name</string>
    <string name="new_scenario">New Scenario</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="input_params">Input Params</string>
    <string name="layer_config">Layer Config</string>
    <string name="output_params">Output Params</string>
    <string name="configure_the_input_parameters">Configure the input parameters</string>
    <string name="image_source">Image Source</string>
...
    <string name="run_demo">Run Demo</string>
    <string name="save_scenario">Save Scenario</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete_it">Are you sure you want to delete it?</string>
    <string name="are_you_sure_to_shut_device_down">Are you sure you want to shut down the device?</string>
    <string name="are_you_sure_to_restart_device">Are you sure you want to restart the device?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="new_person">New Person</string>
    <string name="are_you_sure_to_send_signature">This action will overwrite the current configuration on the device.</string>
    <string name="photo_help_title">FaceID Photo Guidelines</string>
    <string name="photo_help_content">
        " 1. Make sure the subject's face is well illuminated.\n"
...
